appId: com.privygate.privyid.stg
---
#"🔵 Cek tampilan Dashboard"
  - runFlow:
      when:
        visible:
          id: "iv_campaign"
      commands:
        - tapOn:
            id: "btn_close"

  - assertVisible: { id: "iv_logo", index: 0, optional: true }
  - assertVisible: { id: "iv_logo", index: 1, optional: true }
  - assertVisible: { id: "iv_logo", index: 2, optional: true }
  - assertVisible: { id: "iv_logo", index: 3, optional: true }
