appId: com.privygate.privyid.stg
---
#"🟡 Koreksi PID dan cek password salah"
      - tapOn: { id: "et_identifier" }
      - eraseText: 50
      - inputText: "YQYZ1346"
      - tapOn: { id: "btn_login" }

      - assertVisible:
          id: "et_password"
          optional: true

      - tapOn: { id: "et_password" }
      - inputText: "Akunsalah"
      - tapOn: { id: "btn_login" }

      - assertVisible:
          text: "Password is incorrect, please try again|Password salah, mohon coba lagi"
          optional: true
